2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_driver.h:
	* unichrome/via_vbe.c: (ViaVbeInitInt10),
	(ViaVbeGetRefreshRateIndex), (ViaVbeGetActiveDevices),
	(ViaVbeSetActiveDevices), (ViaVbeSetPanelExpansion),
	(ViaVbeSetRefresh), (ViaVbeSetMode), (ViaVbeModePreInit):

	VBE code clean up

2007-09-02  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_driver.c: (VIASetupDefaultOptions), (VIASave),
	(VIARestore):
	* unichrome/via_vbe.c: (ViaVbeSetMode):

        Disabled XvDMA for P4M900
        Modified VBE functions calling order 

2007-08-03  Xavier Bachelot <xavier-at-bachelot-dot-org>

	* unichrome/via_bios.h:
	* unichrome/via_mode.h:
	* unichrome/via_video.c: (DecideOverlaySupport):

	Add basic support for DDR667.

2007-06-14  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_accel.c: (viaInitExa):

	Merged EXA initialization from trunk

2007-06-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
	
	* unichrome/via.h:
	* unichrome/via_dri.c: (VIADRIRingBufferInit):
	* unichrome/via_driver.c:
	* unichrome/via_id.c:
	* unichrome/via_id.h:
	* unichrome/via_swov.c: (viaCalculateVideoColor),
	(viaSetColorSpace), (ViaInitVideoStatusFlag), (ViaSetVidCtl),
	(SetFIFO_V3), (SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16),
	(Upd_Video):
	* unichrome/via_vbe.c: (ViaVbeSetMode):
	* unichrome/via_video.c: (DecideOverlaySupport):

	Renamed VT3157 to VT3324.
	Added check for null data block in vbe.
	Remove version check for older version of Xorg.


2007-05-18 Xavier Bachelot <xavier-at-bachelot-dot-org> 

	* libxvmc/Makefile.am:
	* libxvmc/viaXvMC.c: (XvMCCreateContext):

	Backport 2 fixes from Xorg tree.
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=362e03a38682bfcf366242c53444fa36b6052794
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=3cd7dac2b5a1c4bfb66bd1b67904d72dc08cbd0e

2007-05-15  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
