@@ -1,5 +1,13 @@
 2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
+	* unichrome/via_driver.c: (VIAPreInit):
+	* unichrome/via_mode.c: (ViaOutputsDetect):
+	* unichrome/via_vbe.c: (ViaVbeSetActiveDevices):
+
+	Disabled TV detection for P4M900
+
+2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
+
 	* unichrome/via_driver.h:
 	* unichrome/via_vbe.c: (ViaVbeInitInt10),
 	(ViaVbeGetRefreshRateIndex), (ViaVbeGetActiveDevices),
